--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -18,3 +18,4 @@ $color-burgundy: #bd1110;
 $color-grey: #322e2a;
 $color-blue: #5271ff;
 $color-cerise: rgba(99, 35, 35, .75);
+$color-cerise-btn: #7D1C1C;
