--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -31,7 +31,19 @@
             </div>
 </div>
 <div class="show-space-head">
-	<h1>ZEGZEGEZ</h1>
+	<div class="show-space-head-left">
+		<h1 class="show-space-name">{{ space.name|upper }}</h1>
+		<h3 class="show-space-location">6 Rue de Saint-Brice, 51100 Reims</h3>
+		<div class="show-space-btn-locate">
+			<a class="show-space-link-locate" href="https://www.google.fr/maps/place/" ~ {{ space.location }} target="_blank">Localiser</a>
+		</div>
+	</div>
+	<div class="show-space-head-right">
+		<div class="show-space-btn-edit">
+			<a class="show-space-link-edit" href="{{ path('space_edit', {'id': space.id}) }}">Éditer</a>
+		</div>
+		<h2 class="show-space-price">59€/j</h1>
+	</div>
 </div>
 {# 
 	<h1 class="show-title">Accueil /
