change font size J

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -234,6 +234,9 @@ body {
 .show-space-head-right {
     h2 {
         margin: 0;
+        span {
+            font-size: 1.25rem;
+        }
     }
 }
 
