--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -42,7 +42,7 @@
 		<div class="show-space-btn-edit">
 			<a class="show-space-link-edit" href="{{ path('space_edit', {'id': space.id}) }}">Éditer</a>
 		</div>
-		<h2 class="show-space-price">59€/j</h1>
+		<h2 class="show-space-price">59€/<span>j</span></h1>
 	</div>
 </div>
 {# 
