--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -45,6 +45,11 @@
 		<h2 class="show-space-price">59€/<span>j</span></h1>
 	</div>
 </div>
+<ul class="show-space-details-list">
+		<li>{{ space.category }}</li>
+		<li>{{ space.surface }}m²</li>
+		<li>{{ space.capacity }} postes</li>
+</ul>
 {# 
 	<h1 class="show-title">Accueil /
 		{{ space.location }}
