show space description section

--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -50,6 +50,11 @@
 		<li>{{ space.surface }}m²</li>
 		<li>{{ space.capacity }} postes</li>
 </ul>
+<div class="show-space-description">
+	<div class="marks-image-top"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
+	<p class="show-space-description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<div class="marks-image-bottom"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
+</div>
 {# 
 	<h1 class="show-title">Accueil /
 		{{ space.location }}
