--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -268,10 +268,26 @@ body {
     border-bottom: 1px solid $color-black;
     color: $color-cerise-btn;
     display: flex;
+    font-size: .75rem;
     justify-content: space-between;
     list-style-type: none;
     padding-bottom: 1rem;
-    margin: 1rem;
+    margin: 1rem 1rem 0;
+}
+
+.show-space-description {
+    border-bottom: 1px solid $color-black;
+    padding-bottom: 0.5rem;
+    margin: .3rem 1rem;
+    p {
+        margin-bottom: 0;
+    }
+}
+
+.show-space-description-text {
+    font-size: .75rem;
+    margin: 0 1rem;
+    text-align: center;
 }
 
 // END SHOW SPACE
