--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -55,6 +55,26 @@
 	<p class="show-space-description-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 	<div class="marks-image-bottom"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
 </div>
+<div class="show-space-availability">
+	<ul class="show-space-availability-list">
+		<li class="monday">L</li>
+		<li class="tuesday">M</li>
+		<li class="wednesday">M</li>
+		<li class="thursday">J</li>
+		<li class="friday">V</li>
+		<li class="saturday">S</li>
+		<li class="sunday">D</li>
+	</ul>
+	<ul class="show-space-availability-hours-list">
+		<li class="monday">09h-18h</li>
+		<li class="tuesday">09h-18h</li>
+		<li class="wednesday">09h-18h</li>
+		<li class="thursday">09h-18h</li>
+		<li class="friday">09h-18h</li>
+		<li class="saturday">09h-18h</li>
+		<li class="sunday">09h-18h</li>
+	</ul>
+</div>
 {# 
 	<h1 class="show-title">Accueil /
 		{{ space.location }}
