--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -56,15 +56,36 @@
 	<div class="marks-image-bottom"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
 </div>
 <div class="show-space-availability">
-	<ul class="show-space-availability-list">
-		<li class="monday">L</li>
-		<li class="tuesday">M</li>
-		<li class="wednesday">M</li>
-		<li class="thursday">J</li>
-		<li class="friday">V</li>
-		<li class="saturday">S</li>
-		<li class="sunday">D</li>
-	</ul>
+	<div class="show-space-availability-week">
+		<div class="show-space-day">
+			<div class="day-letter">L</div>
+			<div class="day-hours">09h-18h</div>
+		</div>
+		<div class="show-space-day">
+			<div class="day-letter">M</div>
+			<div class="day-hours">09h-18h</div>
+		</div>
+		<div class="show-space-day">
+			<div class="day-letter">M</div>
+			<div class="day-hours">09h-18h</div>
+		</div>
+		<div class="show-space-day">
+			<div class="day-letter">J</div>
+			<div class="day-hours">09h-18h</div>
+		</div>
+		<div class="show-space-day">
+			<div class="day-letter">V</div>
+			<div class="day-hours">09h-18h</div>
+		</div>
+		<div class="show-space-day">
+			<div class="day-letter">S</div>
+			<div class="day-hours">09h-18h</div>
+		</div>
+		<div class="show-space-day">
+			<div class="day-letter">D</div>
+			<div class="day-hours">09h-18h</div>
+		</div>
+	</div>
 {# 	<ul class="show-space-availability-hours-list">
 		<li class="monday">09h|18h</li>
 		<li class="tuesday">09h|18h</li>
