--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -2,127 +2,125 @@
 {% block title %}Trouvez votre espace de travail
 {% endblock %}
 {% block body %}
-<div class="search">
-   {% include "_logoTitle.html.twig" %}
-   <p>Que recherchez - vous ?</p>
-   <div class="searchbar-and-filter">
-      <div class="search-container">
-         <form action="{{ path('space_search') }}" method="get" class="form-search">
-            <input class="search-bar" type="text" id="autocomplete" placeholder="Ou souhaitez-vous travailler ?" name="location" value="{{ location ?? '' }}">
-            <button class="btn form-submit">
-            Chercher
-            </button>
-            <script type="text/javascript" src="{{ api }}"></script>
-            </script>
-      </div>
-      <span class="returnButton" id="myModalBtn">{% include "space/_filter_button.html.twig" %}</span>
-      <div
-         id="myModal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-      <label for="opt-in">
-      <input type="checkbox" name="reunion" id="opt-in" class="hidden-checkbox">
-      Salle de réunion
-      </label>
-      <label for="opt-in">
-      <input type="checkbox" name="coworking" id="opt-in" class="hidden-checkbox">
-      Co-working
-      </label>
-      <label for="opt-in">
-      <input type="checkbox" name="bureauprive" id="opt-in" class="hidden-checkbox">
-      Bureau privé
-      </label>
-      <label for="opt-in">
-      <input type="checkbox" name="opensp" id="opt-in" class="hidden-checkbox">
-      Open space
-      </label>
-      <label for="opt-in">
-      <input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-      Espace de stockage
-      </label>
-      <label for="opt-in">
-      <input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-      Plateaux vides
-      </label>
-      <label for="range">Prix</label>
-      <input type="range" id="price" name="price" min="10" max="1500" step="10">
-      <label for="range">Surface</label>
-      <input type="range" id="surface" name="surface" min="5" max="1000" step="10">
-      <label for="start">Dates</label>
-      <input type="date" id="start" name="date" value="2022-01-15" min="2021-01-05" max="2024-12-31">
-      <button class="closeSearch" type="submit">
-      Chercher
-      </button>
-      </div>
-      </div>
-   </div>
-</div>
-</form>
-{% if spaces %}
-<h2 class="spaces-length">
-   {{ spaces|length }}
-   espaces trouvés
-   {% if location %}
-   à {{ location }}
-</h2>
-{% else %}
-</h2>
-{% endif %}
-{% for space in spaces %}
-<figure class="offer">
-   <img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu"/>
-   <figcaption class="text-offer">
-      <div class="card-border card-content-up cardcontent">
-         <div class="spacecategory card-content-up">{{ space.category }}
-            <span class="point">·</span>
-         </div>
-         <div class="spacecapacity card-content-up">{{ space.capacity }}
-            places
-            <span class="point">·</span>
-         </div>
-         <div class="spacesurface card-content-up">{{ space.surface }}
-            m²
-         </div>
-      </div>
-      <div class="spacelocation card-content-down">{{ space.location }}</div>
-      <div id="price">
-         <div class="spaceprice">
-            <span id="spanprice">{{ space.price }}
-            €</span>
-            <span id="spanpriceday">
-            / jour</span>
-         </div>
-         <a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir
-         l'annonce</a>
-      </div>
-   </figcaption>
-</figure>
-{% endfor %}
-</div>
-{% else %}
-<p>
-   Aucun espace trouvé
-</p>
-<script>
-   // Get the modal
- const modal = document.getElementById("myModal");
- // Get the button that opens the modal
- const btn = document.getElementById("myModalBtn");
- // Get the button closeSearch element that closes the modal
- const closeSearch = document.getElementsByClassName("closeSearch")[0];
- // When the user clicks the button, open the modal
- btn.onclick = function() {
-     modal.style.display = "block";
- }
- // When the user clicks on rechercher(x), close the modal
- closeSearch.onclick = function() {
-     modal.style.display = "none";
- }
- // When the user clicks anywhere outside of the modal, close it
- window.onclick = function(event) {
-     if (event.target == modal) {
-         modal.style.display = "none";
-     }
- }
-</script>
-{% endif %}{% endblock %}
+	<div class="search">
+		{% include "_logoTitle.html.twig" %}
+		<p>Que recherchez - vous ?</p>
+		<div class="searchbar-and-filter">
+			<div class="search-container">
+				<form action="{{ path('space_search') }}" method="get" class="form-search">
+					<input class="search-bar" type="text" id="autocomplete" placeholder="Ou souhaitez-vous travailler ?" name="location" value="{{ location ?? '' }}">
+					<button class="btn form-submit">
+						Chercher
+					</button>
+					<script type="text/javascript" src="{{ api }}"></script>
+					<span class="returnButton" id="myModalBtn">{% include "space/_filter_button.html.twig" %}</span>
+					<div
+						id="myModal" class="modal">
+						<!-- Modal content -->
+						<div class="modal-content">
+							<label for="opt-in">
+								<input type="checkbox" name="reunion" id="opt-in" class="hidden-checkbox">
+								Salle de réunion
+							</label>
+							<label for="opt-in">
+								<input type="checkbox" name="coworking" id="opt-in" class="hidden-checkbox">
+								Co-working
+							</label>
+							<label for="opt-in">
+								<input type="checkbox" name="bureauprive" id="opt-in" class="hidden-checkbox">
+								Bureau privé
+							</label>
+							<label for="opt-in">
+								<input type="checkbox" name="opensp" id="opt-in" class="hidden-checkbox">
+								Open space
+							</label>
+							<label for="opt-in">
+								<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
+								Espace de stockage
+							</label>
+							<label for="opt-in">
+								<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
+								Plateaux vides
+							</label>
+							<label for="range">Prix</label>
+							<input type="range" id="price" name="price" min="10" max="1500" step="10">
+							<label for="range">Surface</label>
+							<input type="range" id="surface" name="surface" min="5" max="1000" step="10">
+							<label for="start">Dates</label>
+							<input type="date" id="start" name="date" value="2022-01-15" min="2021-01-05" max="2024-12-31">
+							<button class="closeSearch" type="submit">
+								Chercher
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		{% if spaces %}
+			<h2 class="spaces-length">
+				{{ spaces|length }}
+				espaces trouvés
+				{% if location %}
+					à
+					{{ location }}
+				{% endif %}
+			</h2>
+			{% for space in spaces %}
+				<figure class="offer">
+					<img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu"/>
+					<figcaption class="text-offer">
+						<div class="card-border card-content-up cardcontent">
+							<div class="spacecategory card-content-up">{{ space.category }}
+								<span class="point">·</span>
+							</div>
+							<div class="spacecapacity card-content-up">{{ space.capacity }}
+								places
+								<span class="point">·</span>
+							</div>
+							<div class="spacesurface card-content-up">{{ space.surface }}
+								m²
+							</div>
+						</div>
+						<div class="spacelocation card-content-down">{{ space.location }}</div>
+						<div id="price">
+							<div class="spaceprice">
+								<span id="spanprice">{{ space.price }}
+									€</span>
+								<span id="spanpriceday">
+									/ jour</span>
+							</div>
+							<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir
+															l'annonce</a>
+						</div>
+					</figcaption>
+				</figure>
+			{% endfor %}
+		{% else %}
+			<p>
+				Aucun espace trouvé
+			</p>
+			<script>
+				// Get the modal
+const modal = document.getElementById("myModal");
+// Get the button that opens the modal
+const btn = document.getElementById("myModalBtn");
+// Get the button closeSearch element that closes the modal
+const closeSearch = document.getElementsByClassName("closeSearch")[0];
+// When the user clicks the button, open the modal
+btn.onclick = function () {
+modal.style.display = "block";
+}
+// When the user clicks on rechercher(x), close the modal
+closeSearch.onclick = function () {
+modal.style.display = "none";
+}
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function (event) {
+if (event.target == modal) {
+modal.style.display = "none";
+}
+}
+			</script>
+		{% endif %}
+	</div>
+{% endblock %}
