--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -95,9 +95,12 @@
 		<li>{{ space.owner.company }}</li>
 	</ul>
 	<ul class="show-space-owner-contact">
-		<li>06 27 98 04 43</li>
 		<li>{{ space.owner.email }}</li>
+		<li>06 27 98 04 43</li>
 	</ul>
+</div>
+<div class="show-space-reservation">
+	<h2>Réserver</h2>
 </div>
 {# 
 	<h1 class="show-title">Accueil /
