--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -12,6 +12,7 @@ $color-black: #000000;
 $color-yellow: #ffff00;
 $color-light-grey: rgb(136, 136, 136);
 $color-black-opacity: rgba(0, 0, 0, .3);
+$color-black-modal-reservation: rgba(0, 0, 0, .7);
 $color-light-red: rgb(196, 154, 154);
 $color-white: #fafafa;
 $color-burgundy: #bd1110;
