--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -109,7 +109,7 @@
 	    	<span class='show-reservation-modal-close' onclick='closeModal()'>&times;</span>
         </div>
 		<input type="date" id="date" name="date" value="2022-01-15">
-		<input class="show-reservation-submit" type="submit" value="Réserver">Réserver</input>
+		<input class="show-reservation-submit" type="submit" value="Réserver"></input>
     </form>
 </div>
 <script>
